1998-11-19  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Makefile.am (CLEANFILES): Append version.h.

	* DefObject.m (lispIn): Get typeNameString directly from list.

	* DefObject.[hm], defobj.h: Remove lispInQuotedExpr.

	* Archiver.m (processPairs): Simplified to use ArchiverPair objects.

1998-11-18  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* DefObject.[hm], defobj.h: Add lispIn{String,Keyword}.

	* DefObject.m ([Object_s -lispOut:]): Add a (very fragile) special
	case to allow member_t, so that Lists with setIndexFromMemberLoc:
	can be serialized.

1998-11-17  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Program.[hm] (defobj_lookup_type): New function.

	* DefObject.m (lispInQuotedExpr): Renamed from lispinQuotedExpr.
	(lispInBoolean, lispInInteger): New functions.
	(lispIn): First try type object, then look for a class of the
	desired name.
	([Object_s -lispInCreate:]): New stub.
	Handle renames of lispIn: and lispOut: throughout.
	
	* DefObject.h (Object_s): Rename lisp{in,out} to lisp{In,Out}.
	Declare lispIn, lispInQuotedExpr, lispInBoolean, and lispInInteger
	here. 

	* Archiver.h: Rename lispout to lispOut. Use
	renamed lispInQuotedExpr and lispIn.

	* defobj.h (Serialization): New protocol.  Put lispIn,
	lispInQuotedExpr, and archvierSave here.
	Put lispInCreate: in creating phase.
	Rename lisp{in,out}: to lisp{In,Out}:. Declare defobj_lookup_type.

1998-11-16  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* DefObject.m: Include predicates.h.
	(find_ivar): New function.
	([Object_s -lispin:]): Handle arrays, numbers, strings, and 
	object creation.
	(output_type): Print character when isprint-able, otherwise
	use 3-digit octal.  Return type + 1 in default return.

	* defobj.h, DefObject.[hm]: Replace +lispin:expr with lispin ().
	Declare archiverSave.

	* Archiver.m (callLispIn): Remove.
	(processMakeObjcPairs): Call lispin directly.

	* Makefile.am ($(OBJECTS)): Depend on version.h.

1998-11-15  Marcus G. Daniels  <mgd@chama.santafe.edu>
